# console_game_life

./: CMakeLists.txt  README  game_logic.cpp  game_logic.hpp  game_page.cpp  game_page.hpp  main.cpp  menu_page.cpp  menu_page.hpp  my_types.hpp  pages_utils.cpp  pages_utils.hpp  rules_page.cpp  rules_page.hpp  settings.cpp  settings.hpp  settings_page.cpp  settings_page.hpp
